# violet-legacy

./: .build.yml  .editorconfig  .envrc  .gitignore  Cargo.toml  LICENSE  Main.idr  Main.lean  Makefile  README.md  Violet.idr  Violet.lean  ast.rkt  build.rkt  build.rs  codegen.rkt  command.rkt  compile.rkt  flake.nix  info.rkt  lake-manifest.json  lakefile.lean  main.rkt  parse.rkt  parser.rkt  req.json  tyck.rkt  violet.ipkg  violet.rs
.github/: auto_assign.yml
.github/workflows/: ci.yaml  ci.yml  rust.yml
.hook/: pre-commit
Tests/: Parsing.lean
Violet/: CLI.lean  CParser.idr  CliContext.lean  Core.idr  Lexer.idr  Parser.idr  Parser.lean  Syntax.idr  Val.idr
Violet/Ast/: Common.lean  Core.lean  Surface.lean
Violet/Core/: Context.lean  DBI.lean  Elab.lean  Elaboration.lean  Eval.lean  Position.idr  Term.idr  Unification.lean  Val.idr  Value.lean
command/: build.rkt  compile.rkt
example/: .gitignore  AModule.vt  Base.vt  Core.vt  Lib.vt  hello.ss  hello.vl  hi.ss  hi.vl  leibniz.vt  module.vt  module_failed.vt  test.vt
runtime/: build.zig
runtime/src/: main.zig  value.zig
src/: Main.idr  ast.rs  main.rs
src/CLI/: Check.idr
src/Control/App/: Handler.idr
src/Libraries/Data/: Graph.idr
src/Violet/: Core.idr  Elaboration.idr  Lexer.idr  Parser.idr  Syntax.idr  Unification.idr
src/Violet/Core/: Common.idr  Conversion.idr  DataType.idr  Elab.idr  Eval.idr  MetaContext.idr  Syntax.idr  Term.idr  Val.idr
src/Violet/Error/: Check.idr  (+3 more)
src/compile/: mod.rs
src/parser/: .gitignore  error.rs  mod.rs  violet.lalrpop
src/tyck/: error.rs  mod.rs
(+3 files in other folders)
