[package]
name = "violet"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies] # <-- We added this and everything after!
lalrpop = "^0.19"

[dependencies]
lalrpop-util = { version = "^0.19", features = ["lexer"] }
regex = "1"
