[package]
name = "violet"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies] # <-- We added this and everything after!
lalrpop = "^0.19"

[dependencies]
itertools = "0.10.5"
lalrpop-util = { version = "^0.19", features = ["lexer"] }
miette = { version = "5.3.0", features = ["fancy"] }
regex = "1"
thiserror = "1.0.37"
